--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sitio web para el Global Azure Bootcamp",
   "main": "index.js",
   "scripts": {
+    "start": "gulp serve"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
